// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/docker/common getRegistryRepository handles local registries 1`] = `
Object {
  "dockerRepository": "org/package",
  "registryHost": "https://registry:5000",
}
`;

exports[`datasource/docker/common getRegistryRepository supports http registryUrls 1`] = `
Object {
  "dockerRepository": "image",
  "registryHost": "http://my.local.registry/prefix",
}
`;

exports[`datasource/docker/common getRegistryRepository supports registryUrls 1`] = `
Object {
  "dockerRepository": "image",
  "registryHost": "https://my.local.registry/prefix",
}
`;

exports[`datasource/docker/common getRegistryRepository supports schemeless registryUrls 1`] = `
Object {
  "dockerRepository": "image",
  "registryHost": "https://my.local.registry/prefix",
}
`;
